--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,278 @@
+*,
+::after,
+::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  color: hsl(209, 61%, 16%);
+  background-color: hsl(210, 36%, 96%);
+  line-height: 1.5;
+  font-size: 1rem;
+}
+ul {
+  list-style-type: none;
+}
+a {
+  text-decoration: none;
+}
+img:not(.logo) {
+  width: 100%;
+}
+img {
+  display: block;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  letter-spacing: 0.25rem;
+  text-transform: capitalize;
+  line-height: 1.25;
+  margin-bottom: 0.75rem;
+  font-family: 'Roboto', sans-serif;
+}
+h1 {
+  font-size: 3rem;
+}
+h2 {
+  font-size: 2rem;
+}
+h3 {
+  font-size: 1.25rem;
+}
+h4 {
+  font-size: 0.875rem;
+}
+p {
+  color: hsl(210, 22%, 49%);
+}
+@media screen and (min-width: 800px) {
+  h1 {
+    font-size: 4rem;
+  }
+  h2 {
+    font-size: 2.5rem;
+  }
+  h3 {
+    font-size: 1.75rem;
+  }
+  h4 {
+    font-size: 1rem;
+  }
+  body {
+    font-size: 1rem;
+  }
+  h1,
+  h2,
+  h3,
+  h4 {
+    line-height: 1;
+  }
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+main {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: flex-start;
+  gap: 1rem;
+}
+
+.flex-col {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+}
+
+section {
+  width: 100%;
+  margin: 0.5rem 0;
+}
+
+button {
+  border: none;
+  padding: 0.2rem 0.5rem;
+  background: hsl(205, 90%, 88%);
+  font-size: 1rem;
+  transition: all 0.3s ease;
+  text-transform: capitalize;
+}
+
+button:hover {
+  transform: scale(1.1);
+}
+
+.nav-info {
+  width: 70%;
+  padding: 0.2rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  gap: 0.3rem;
+  margin: 0.2rem;
+}
+
+form {
+  background: #fff;
+  border-radius: 0.3rem;
+  width: 70%;
+  padding: 1rem;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+}
+
+.form-input {
+  margin: 1rem 0;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.form-content {
+  padding: 0.2rem 0.5rem;
+  width: 95%;
+}
+
+.slider {
+  display: flex;
+  width: 70%;
+  justify-content: space-between;
+}
+
+.box {
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+  align-items: center;
+  text-align: center;
+  font-size: 0.8rem;
+  width: 30%;
+  position: relative;
+  background: #fff;
+  border: 2px hsl(205, 86%, 17%) solid;
+  border-radius: 0.2rem;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease;
+  cursor: pointer;
+  gap: 15px;
+}
+
+.slider-tab {
+  height: 100%;
+  width: 50%;
+  border-radius: 0.2rem;
+  position: absolute;
+  background: hsl(205, 86%, 17%);
+  top: 0;
+  left: 0;
+  transition: all 0.3s ease;
+}
+
+.slider-tab.right {
+  left: 50%;
+}
+
+.total-amount {
+  background: #fff;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  border: 2px hsl(205, 86%, 17%) solid;
+  padding: 0 0.5rem;
+  border-radius: 0.2rem;
+}
+
+table {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  text-align: center;
+  padding: 1rem;
+  width: 70%;
+}
+
+thead,
+tbody {
+  width: 100%;
+}
+
+tr {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background: #fff;
+  padding: 0.3rem;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  width: 100%;
+}
+
+td {
+  color: black;
+  font-size: 0.7rem;
+  width: 5rem;
+}
+
+@media screen and (max-width: 950px) {
+  tr {
+    padding: 0.1rem;
+  }
+
+  td {
+    width: 4rem;
+    font-size: 0.6rem;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  p {
+    font-size: 0.7rem;
+  }
+
+  form,
+  .todo-list {
+    width: 85%;
+    padding: 0.2rem 0.2rem;
+  }
+
+  button,
+  .icon-button {
+    padding: 0.1rem 0.3rem;
+    font-size: 0.7rem;
+  }
+
+  label,
+  .form-content {
+    font-size: 0.7rem;
+  }
+
+  tr {
+    padding: 0.1rem;
+  }
+
+  td {
+    width: 4rem;
+    font-size: 0.5rem;
+  }
 }
