--- a/src/index.css
+++ b/src/index.css
@@ -163,8 +163,7 @@ form {
 
 .box {
   display: flex;
-  justify-content: center;
-  gap: 5px;
+  justify-content: space-around;
   align-items: center;
   text-align: center;
   font-size: 0.8rem;
@@ -181,7 +180,7 @@ form {
 
 .slider-tab {
   height: 100%;
-  width: 50%;
+  width: 51%;
   border-radius: 0.2rem;
   position: absolute;
   background: hsl(205, 86%, 17%);
