--- a/src/index.css
+++ b/src/index.css
@@ -83,7 +83,7 @@ code {
 }
 
 main {
-  padding-top: 4rem;
+  padding-top: 6rem;
   padding-bottom: 4rem;
   height: 100vh;
   width: 100vw;
@@ -241,20 +241,26 @@ td {
 }
 
 .info-div {
-  width: 70%;
+  position: absolute;
+  top: 0;
+  width: 100%;
   display: flex;
+  gap: 5px;
   flex-direction: column;
-  align-items: left;
-  text-align: left;
+  align-items: center;
+  text-align: center;
   justify-content: center;
+  padding: 1rem 0;
+}
+
+.info-content {
+  font-size: 0.7rem;
+  color: red;
   border-radius: 0.3rem;
   border: solid red 2px;
   padding: 0.3rem 1rem;
   background: #fff;
-}
-
-.info-content {
-  color: red;
+  width: 70%;
 }
 
 @media screen and (max-width: 950px) {
